crates/vexor-compiler/tests/golden/error/output/rect_arity.err
parse error at line 2, column 17
  |
2 | let r = Rect(10)
  |                 ^
